@@ -1269,7 +1269,7 @@
 										$hosts_map[$sel['elementid']][$selementid] = $selementid;
 									break;
 									case SYSMAP_ELEMENT_TYPE_TRIGGER:
-										$triggers_map_submaps[$sel['elementid']][$selementid] = $selementid;
+										$triggers_map[$sel['elementid']][$selementid] = $selementid;
 									break;
 								}
 							}
@@ -1348,30 +1348,12 @@
 				'nopermissions' => 1,
 				'filter' => array('value' => array(TRIGGER_VALUE_UNKNOWN, TRIGGER_VALUE_TRUE)),
 				'nodeids' => get_current_nodeid(true),
-			);
-			$triggers = CTrigger::get($options);
-			$all_triggers = array_merge($all_triggers, $triggers);
-			foreach($triggers as $trigger){
-				foreach($triggers_map[$trigger['triggerid']] as $belongs_to_sel){
-					$selements[$belongs_to_sel]['triggers'][$trigger['triggerid']] = $trigger['triggerid'];
-				}
-			}
-		}
-
-// triggers from submaps, skip dependent
-		if(!empty($triggers_map_submaps)){
-			$options = array(
-				'triggerids' => array_keys($triggers_map_submaps),
-				'output' => API_OUTPUT_EXTEND,
-				'nopermissions' => 1,
-				'filter' => array('value' => array(TRIGGER_VALUE_UNKNOWN, TRIGGER_VALUE_TRUE)),
-				'nodeids' => get_current_nodeid(true),
 				'skipDependent' => 1,
 			);
 			$triggers = CTrigger::get($options);
 			$all_triggers = array_merge($all_triggers, $triggers);
 			foreach($triggers as $trigger){
-				foreach($triggers_map_submaps[$trigger['triggerid']] as $belongs_to_sel){
+				foreach($triggers_map[$trigger['triggerid']] as $belongs_to_sel){
 					$selements[$belongs_to_sel]['triggers'][$trigger['triggerid']] = $trigger['triggerid'];
 				}
 			}
